Enabled Tailscale split-dns. Reconfigured environment variable process.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,153 +1,177 @@
 services:
   transmission:
-    image: ${TRANSMISSION_DOCKER_IMAGE:-ghcr.io/linuxserver/transmission:latest}
+    image: ${TRANSMISSION_DOCKER_IMAGE:-'ghcr.io/linuxserver/transmission:latest'}
+    restart: unless-stopped
+    env_file:
+      - ./env/linuxserver.env
+      - ./env/transmission.default.env
+      - ${TRANSMISSION_ENV_FILE:-./env/empty.env}
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Pacific/Auckland
-      - USER=admin
-      - PASS=${TRANSMISSION_PASSWORD:-}
-      - TRANSMISSION_WEB_HOME=/flood-for-transmission/ # required for linuxserver image
-      - TRANSMISSION_WEB_UI=flood-for-transmission # required for OpenVPN image
-      - OPENVPN_PROVIDER=${TRANSMISSION_OPENVPN_PROVIDER:-} # required for OpenVPN image
-      - OPENVPN_CONFIG=${TRANSMISSION_OPENVPN_CONFIG:-} # required for OpenVPN image
-      - OPENVPN_USERNAME=${TRANSMISSION_OPENVPN_USERNAME:-} # required for OpenVPN image
-      - OPENVPN_PASSWORD=${TRANSMISSION_OPENVPN_PASSWORD:-} # required for OpenVPN image
       - LOCAL_NETWORK=${DOCKER_SUBNET:-172.50.0.0/24} # required for OpenVPN image
-      - TRANSMISSION_HOME=/config # required for OpenVPN image
-      - TRANSMISSION_DOWNLOAD_DIR=/downloads/complete # required for OpenVPN image
-      - TRANSMISSION_INCOMPLETE_DIR=/downloads/incomplete # required for OpenVPN image
-      - TRANSMISSION_WATCH_DIR=/watch # required for OpenVPN image
     cap_add:
       - net_admin
+    dns:
+      - ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
     volumes:
       - ./data/transmission/config:/config
       - ${TRANSMISSION_DOWNLOAD_PATH:-./data/transmission/downloads}:/downloads
       - ${TRANSMISSION_WATCH_PATH:-./data/transmission/watch}:/watch
-    ports:
-      - 9091:9091
-      - 51413:51413
-      - 51413:51413/udp
-    restart: unless-stopped
     labels:
       - traefik.enable=true
       - traefik.http.services.transmission.loadbalancer.server.port=9091
-      - traefik.http.routers.transmission.rule=Host(`transmission.${TRAEFIK_IP_ADDRESS:-172.50.0.1}.nip.io`)
+      - traefik.http.routers.transmission.entrypoints=web
+      - traefik.http.routers.transmission.rule=Host(`transmission.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}`)
       - traefik.http.routers.transmission.service=transmission
+      - traefik.tcp.services.transmission.loadbalancer.server.port=51413
+      - traefik.tcp.routers.transmission.entrypoints=transmission
+      - traefik.tcp.routers.transmission.rule=HostSNI(`*`)
+      - traefik.tcp.routers.transmission.service=transmission
+      - traefik.udp.services.transmission.loadbalancer.server.port=51413
+      - traefik.udp.routers.transmission.entrypoints=transmissionudp
+      - traefik.udp.routers.transmission.service=transmission
 
   jackett:
     image: ghcr.io/linuxserver/jackett:latest
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Pacific/Auckland
+    restart: unless-stopped
+    env_file:
+      - ./env/linuxserver.env
+      - ${JACKETT_ENV_FILE:-./env/empty.env}
+    dns:
+      - ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
     volumes:
       - ./data/jackett/config:/config
-    ports:
-      - 9117:9117
-    restart: unless-stopped
     labels:
       - traefik.enable=true
       - traefik.http.services.jackett.loadbalancer.server.port=9117
-      - traefik.http.routers.jackett.rule=Host(`jackett.${TRAEFIK_IP_ADDRESS:-172.50.0.1}.nip.io`)
+      - traefik.http.routers.jackett.entrypoints=web
+      - traefik.http.routers.jackett.rule=Host(`jackett.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}`)
       - traefik.http.routers.jackett.service=jackett
 
   sonarr:
     image: ghcr.io/linuxserver/sonarr:latest
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Pacific/Auckland
+    restart: unless-stopped
+    env_file:
+      - ./env/linuxserver.env
+      - ${SONARR_ENV_FILE:-./env/empty.env}
+    dns:
+      - ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
     volumes:
       - ./data/sonarr/config:/config
       - ${SONARR_TV_PATH:-./data/sonarr/tv}:/tv
       - ${TRANSMISSION_DOWNLOAD_PATH:-./data/transmission/downloads}:/downloads
-    ports:
-      - 8989:8989
-    restart: unless-stopped
     labels:
       - traefik.enable=true
       - traefik.http.services.sonarr.loadbalancer.server.port=8989
-      - traefik.http.routers.sonarr.rule=Host(`sonarr.${TRAEFIK_IP_ADDRESS:-172.50.0.1}.nip.io`)
+      - traefik.http.routers.sonarr.entrypoints=web
+      - traefik.http.routers.sonarr.rule=Host(`sonarr.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}`)
       - traefik.http.routers.sonarr.service=sonarr
 
   radarr:
     image: ghcr.io/linuxserver/radarr:latest
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Pacific/Auckland
+    restart: unless-stopped
+    env_file:
+      - ./env/linuxserver.env
+      - ${RADARR_ENV_FILE:-./env/empty.env}
+    dns:
+      - ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
     volumes:
       - ./data/radarr/config:/config
       - ${RADARR_MOVIES_PATH:-./data/radarr/movies}:/movies
       - ${TRANSMISSION_DOWNLOAD_PATH:-./data/transmission/downloads}:/downloads
-    ports:
-      - 7878:7878
-    restart: unless-stopped
     labels:
       - traefik.enable=true
       - traefik.http.services.radarr.loadbalancer.server.port=7878
-      - traefik.http.routers.radarr.rule=Host(`radarr.${TRAEFIK_IP_ADDRESS:-172.50.0.1}.nip.io`)
+      - traefik.http.routers.radarr.entrypoints=web
+      - traefik.http.routers.radarr.rule=Host(`radarr.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}`)
       - traefik.http.routers.radarr.service=radarr
 
   overseerr:
     image: ghcr.io/linuxserver/overseerr:latest
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Pacific/Auckland
+    restart: unless-stopped
+    env_file:
+      - ./env/linuxserver.env
+      - ${OVERSEERR_ENV_FILE:-./env/empty.env}
+    dns:
+      - ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
     volumes:
       - ./data/overseerr/config:/config
-    ports:
-      - 5055:5055
-    restart: unless-stopped
     labels:
       - traefik.enable=true
       - traefik.http.services.overseerr.loadbalancer.server.port=5055
-      - traefik.http.routers.overseerr.rule=Host(`overseerr.${TRAEFIK_IP_ADDRESS:-172.50.0.1}.nip.io`)
+      - traefik.http.routers.overseerr.entrypoints=web
+      - traefik.http.routers.overseerr.rule=Host(`overseerr.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}`)
       - traefik.http.routers.overseerr.service=overseerr
 
   tailscale:
-    image: fastandfearless/tailscale:fromsource-latest
-    sysctls:
-      - net.ipv4.ip_forward=1
-      - net.ipv6.conf.all.forwarding=1
-    entrypoint:
+    image: fastandfearless/tailscale:fromsource-amd64-v1.10.2-c24cbde
+    restart: unless-stopped
+    command:
       - sh
       - -c
       - |
-        #!/bin/sh
         set -e
 
         # Create the tun device path if required
         if [ ! -d /dev/net ]; then mkdir /dev/net; fi
-        if [ ! -e /dev/net/tun ]; then  mknod /dev/net/tun c 10 200; fi
+        if [ ! -e /dev/net/tun ]; then mknod /dev/net/tun c 10 200; fi
 
-        # Wait 5s for the daemon to start and then run tailscale up to configure
-        /bin/sh -c "sleep 5; tailscale up --authkey=${TAILSCALE_AUTH} --advertise-routes=${DOCKER_SUBNET:-172.50.0.0/24} --advertise-tags=${TAILSCALE_TAGS:-} --advertise-exit-node --hostname=${TAILSCALE_HOSTNAME:-htpc}" &
-        exec tailscaled --state=/var/run/tailscale/tailscaled.state
+        exec tailscaled --state=/var/run/tailscale/tailscale.state
+    env_file:
+      - ${TAILSCALE_ENV_FILE:-./env/empty.env}
+    sysctls:
+      - net.ipv4.ip_forward=1
+      - net.ipv6.conf.all.forwarding=1
     cap_add:
       - net_admin
     volumes:
       - ./data/tailscale/config:/var/run/tailscale
+
+  coredns:
+    image: coredns/coredns:latest
     restart: unless-stopped
+    command:
+      - -conf=/var/run/coredns/Corefile
+    env_file:
+      - ${COREDNS_ENV_FILE:-./env/empty.env}
+    environment:
+      - TAILSCALE_SEARCH_DOMAIN=${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}
+      - TRAEFIK_IP_ADDRESS=${TRAEFIK_IP_ADDRESS:-172.50.0.254}
+    volumes:
+      - ./data/coredns/config:/var/run/coredns
+    labels:
+      - traefik.enable=true
+      - traefik.udp.services.coredns.loadbalancer.server.port=53
+      - traefik.udp.routers.coredns.entrypoints=coredns
+      - traefik.udp.routers.coredns.service=coredns
 
   traefik:
     image: traefik:2.4
+    restart: unless-stopped
     command:
       - --accesslog.format=json
       - --api.insecure=true
       - --api.dashboard=true
-      - --entrypoints.web.address=:8000
+      - --entrypoints.web.address=:80
+      - --entrypoints.coredns.address=:53/udp
+      - --entrypoints.transmission.address=:51413
+      - --entrypoints.transmissionudp.address=:51413/udp
       - --providers.docker.endpoint=unix:///var/run/docker.sock
       - --providers.docker.exposedbydefault=false
+    env_file:
+      - ${TRAEFIK_ENV_FILE:-./env/empty.env}
+    expose:
+      - 80
+      - 53/udp
+      - 51413
+      - 51413/udp
     ports:
-      - ${TRAEFIK_HOST_PORT:-8000}:8000
-      - 8080:8080
+      - ${TRAEFIK_HTTP_PORT:-80}:80
+      - ${TRAEFIK_COREDNS_PORT:-53}:53/udp
+      - ${TRAEFIK_TRANSMISSION_PORT:-51413}:51413
+      - ${TRAEFIK_TRANSMISSION_PORT:-51413}:51413/udp
     networks:
       default:
-        ipv4_address: ${TRAEFIK_IP_ADDRESS:-172.50.0.1}
-    restart: unless-stopped
+        ipv4_address: ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     cap_drop:
@@ -156,7 +180,8 @@ services:
       - net_bind_service
     labels:
       - traefik.enable=true
-      - traefik.http.routers.traefik.rule=Host(`traefik.${TRAEFIK_IP_ADDRESS:-172.50.0.1}.nip.io`)
+      - traefik.http.routers.traefik.rule=Host(`traefik.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}`)
+      - traefik.http.routers.traefik.entrypoints=web
       - traefik.http.routers.traefik.service=api@internal
 
 networks:
