--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,12 +8,17 @@ services:
       - ${TRANSMISSION_ENV_FILE:-./env/empty.env}
     environment:
       - LOCAL_NETWORK=${DOCKER_SUBNET:-172.50.0.0/24} # required for OpenVPN image
+    ports:
+      - ${TRANSMISSION_PEER_PORT:-51413}:51413
+      - ${TRANSMISSION_PEER_PORT:-51413}:51413/udp
     cap_add:
       - net_admin
-    dns:
-      - ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
     volumes:
-      - ./data/transmission/config:/config
+      - ./data/transmission/config/blocklists:/config/blocklists
+      - ./data/transmission/config/custom-cont-init.d:/config/custom-cont-init.d
+      - ./data/transmission/config/custom-services.d:/config/custom-services.d
+      - ./data/transmission/config/resume:/config/resume
+      - ./data/transmission/config/torrents:/config/torrents
       - ${TRANSMISSION_DOWNLOAD_PATH:-./data/transmission/downloads}:/downloads
       - ${TRANSMISSION_WATCH_PATH:-./data/transmission/watch}:/watch
     labels:
@@ -22,13 +27,6 @@ services:
       - traefik.http.routers.transmission.entrypoints=web
       - traefik.http.routers.transmission.rule=Host(`transmission.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}`)
       - traefik.http.routers.transmission.service=transmission
-      - traefik.tcp.services.transmission.loadbalancer.server.port=51413
-      - traefik.tcp.routers.transmission.entrypoints=transmission
-      - traefik.tcp.routers.transmission.rule=HostSNI(`*`)
-      - traefik.tcp.routers.transmission.service=transmission
-      - traefik.udp.services.transmission.loadbalancer.server.port=51413
-      - traefik.udp.routers.transmission.entrypoints=transmissionudp
-      - traefik.udp.routers.transmission.service=transmission
 
   jackett:
     image: ghcr.io/linuxserver/jackett:latest
@@ -36,8 +34,6 @@ services:
     env_file:
       - ./env/linuxserver.env
       - ${JACKETT_ENV_FILE:-./env/empty.env}
-    dns:
-      - ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
     volumes:
       - ./data/jackett/config:/config
     labels:
@@ -53,8 +49,10 @@ services:
     env_file:
       - ./env/linuxserver.env
       - ${SONARR_ENV_FILE:-./env/empty.env}
-    dns:
-      - ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
+    extra_hosts:
+      - transmission.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}:${TRAEFIK_IP_ADDRESS:-172.50.0.254}
+      - jackett.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}:${TRAEFIK_IP_ADDRESS:-172.50.0.254}
+      - sonarr.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}:${TRAEFIK_IP_ADDRESS:-172.50.0.254}
     volumes:
       - ./data/sonarr/config:/config
       - ${SONARR_TV_PATH:-./data/sonarr/tv}:/tv
@@ -72,8 +70,10 @@ services:
     env_file:
       - ./env/linuxserver.env
       - ${RADARR_ENV_FILE:-./env/empty.env}
-    dns:
-      - ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
+    extra_hosts: 
+      - transmission.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}:${TRAEFIK_IP_ADDRESS:-172.50.0.254}
+      - jackett.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}:${TRAEFIK_IP_ADDRESS:-172.50.0.254}
+      - radarr.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}:${TRAEFIK_IP_ADDRESS:-172.50.0.254}
     volumes:
       - ./data/radarr/config:/config
       - ${RADARR_MOVIES_PATH:-./data/radarr/movies}:/movies
@@ -91,8 +91,10 @@ services:
     env_file:
       - ./env/linuxserver.env
       - ${OVERSEERR_ENV_FILE:-./env/empty.env}
-    dns:
-      - ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
+    extra_hosts:
+      - sonarr.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}:${TRAEFIK_IP_ADDRESS:-172.50.0.254}
+      - radarr.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}:${TRAEFIK_IP_ADDRESS:-172.50.0.254}
+      - overseerr.${TAILSCALE_SEARCH_DOMAIN:-htpc.internal}:${TRAEFIK_IP_ADDRESS:-172.50.0.254}
     volumes:
       - ./data/overseerr/config:/config
     labels:
@@ -153,8 +155,6 @@ services:
       - --api.dashboard=true
       - --entrypoints.web.address=:80
       - --entrypoints.coredns.address=:53/udp
-      - --entrypoints.transmission.address=:51413
-      - --entrypoints.transmissionudp.address=:51413/udp
       - --providers.docker.endpoint=unix:///var/run/docker.sock
       - --providers.docker.exposedbydefault=false
     env_file:
@@ -162,13 +162,8 @@ services:
     expose:
       - 80
       - 53/udp
-      - 51413
-      - 51413/udp
     ports:
       - ${TRAEFIK_HTTP_PORT:-80}:80
-      - ${TRAEFIK_COREDNS_PORT:-53}:53/udp
-      - ${TRAEFIK_TRANSMISSION_PORT:-51413}:51413
-      - ${TRAEFIK_TRANSMISSION_PORT:-51413}:51413/udp
     networks:
       default:
         ipv4_address: ${TRAEFIK_IP_ADDRESS:-172.50.0.254}
